test/ui/tests/fail/unsupported-property.stderr
error: unsupported property
 --> tests/fail/unsupported-property.rs:1:16
  |
1 | #[neon::export(foo)]
  |                ^^^

error: unsupported property
 --> tests/fail/unsupported-property.rs:4:16
  |
4 | #[neon::export(foo)]
  |                ^^^
